--- a/StartMenuUI/startmenu.html
+++ b/StartMenuUI/startmenu.html
@@ -1,134 +1,231 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>StartMenuPane</title>
-    <meta charset="UTF-8" />
-    <style type="text/css">
+    <head>
+        <title>StartMenuPane</title>
+        <meta charset="UTF-8" />
+        <style type="text/css">
 #startmenu {
-  background: black;
-  width: 500px;
-  height: 600px;
+    background: black;
+    width: 1068px;
+    height: 600px;
 }
 
 #leftpane {
-  width: 288px;
-  height: 584px;
-  float: left;
-  background: white;
-  margin: 8px 0px auto 8px;
+    width: 288px;
+    height: 584px;
+    float: left;
+    background: white;
+    margin: 8px 0px auto 8px;
 }
 #rightpane {
-  width: 40%;
-  height: 100%;
-  float: left;
-  margin: 8px 0px;
+    width: 204px;
+    height: 100%;
+    float: left;
+    margin: 8px 0px;
+}
+#right_submenu {
+    width: 150px;
+    height: 584px;
+    float: left;
+    background: white;
+    margin: 8px 8px auto 0px;
+}
+#right_workplace {
+    width: 400px;
+    height: 584px;
+    float: left;
+    background: white;
+    margin: 8px 8px auto 0px;
 }
 #lefthead {
-  height: 13%
+    height: 13%
 }
-#listview {
-  height: 65%
+#itemlistview {
+    height: 68%
 }
 #leftbottom {
-  height: 13%
+    height: 10%
 }
 #righthead {
-  height: 13%
+    height: 13%
 }
 .blue {
-    color: #d9eef7;
-    border: solid 1px #0076a3;
-    background: #0095cd;
+        color: #d9eef7;
+        border: solid 1px #0076a3;
+        background: #0095cd;
 }
-.button {
-    display: inline-block;
-    line-height:30px;
-    text-align: center;
-    text-decoration: none;
-    height: 60px;
-    width: 60px;
-    float: left;
-    margin: 10px 10px auto 10px;
-}
-.pfirst {
-    margin-left: 30px;
-}
-
-.pane_nav {
-    width: 100%;
-}
-.imgbuttonsel {
-    background-image:  url('pane_button.png');
+.itembutton {
+        display: inline-block;
+        line-height:30px;
+        text-align: center;
+        text-decoration: none;
+        height: 60px;
+        width: 60px;
+        float: left;
+        margin: 10px 10px auto 10px;
 }
 
 .imgbutton {
-    width: 100%;
-    height: 35px;
-    float: left;
-    text-align: center;
-    text-decoration: none;
-    line-height:30px;
-    color: #d9eef7;
+        display: inline-block;
+        height: 60px;
+        width: 60px;
+        float: left;
+        margin: 10px 10px auto 10px;
 }
 
-.imgbutton:hover {
-    background: DarkOrange;
+
+.pfirst {
+        margin-left: 30px;
 }
 
-    </style>
-    <script type="text/javascript">
-      var defaultimgbtnsel = 'rp_rcapp';
-      var lastimgbuttonsel = defaultimgbtnsel;
-      function rplink_click(btnid) {
-         document.getElementById(lastimgbuttonsel).className="imgbutton";
-         document.getElementById(btnid).className="imgbutton imgbuttonsel";
-         lastimgbuttonsel = btnid;
-      }
+.pane_nav {
+        width: 100%;
+}
+.sel_nav_left {
+        background: DarkOrange;
+        background-image: url('nav_left.png');
+        background-repeat: no-repeat;
+}
+.sel_nav_right {
+        background: DarkOrange;
+        background-image: url('nav_right.png');
+        background-repeat: no-repeat;
+        background-position:right;
+}
+.navbutton {
+        width: 100%;
+        height: 35px;
+        float: left;
+        text-align: center;
+        text-decoration: none;
+        line-height:30px;
+        color: #d9eef7;
+}
 
-    </script>
-  </head>
-  <body>
-  <div id='startmenu'>
-    <div id='leftpane'>
-      <div id='lefthead'>
-        <a href="#" class="button blue pfirst">常用<br/>程序</a>
-        <a href="#" class="button blue">磁盘<br/>工具</a>
-        <a href="#" class="button blue">系统<br/>安装</a>
+.navbutton:hover {
+        background: DarkOrange;
+}
+
+        </style>
+        <script type="text/javascript">
+            var defaultnavlbtnsel = 'rp_rcapp';
+            var lastnavlbuttonsel = defaultnavlbtnsel;
+            var hashtbl = {};
+            function rpnavllink_click(btnid) {
+                 document.getElementById(lastnavlbuttonsel).className="navbutton";
+                 document.getElementById(btnid).className="navbutton sel_nav_left";
+                 lastnavlbuttonsel = btnid;
+            };
+
+            function ShowElem(id) {
+              var sd = document.getElementById(id).style.display;
+              var sm_sw = document.getElementById('startmenu').offsetWidth;
+              if (typeof(hashtbl[id+'_w'] ) == "undefined") {
+              var sw = document.getElementById(id).offsetWidth;
+                hashtbl[id+'_w'] = sw;
+              }
+              if (sd == 'none') {
+                document.getElementById(id).style.display="inline";
+                document.getElementById('startmenu').style.width = (sm_sw + hashtbl[id+'_w'] + 8) + 'px';
+              } else {
+                document.getElementById('startmenu').style.width = (sm_sw - hashtbl[id+'_w'] - 8) + 'px';
+                document.getElementById(id).style.display="none";
+              }
+            };
+
+            function showallitem(id) {
+                  var href = document.getElementById(id).href;
+                  alert(href.substring(this.length-5,5));
+                  if (href.substring(this.length-5,5) == "# all") {
+                      document.getElementById(id).href = "# back";
+                      document.getElementById(id).text = "    ◀    返回";
+                  } else {
+                      document.getElementById(id).href = "# all";
+                      document.getElementById(id).text = "    ▶    所有程序";
+                  }
+            }
+        </script>
+    </head>
+    <body>
+      <div id='startmenu'>
+          <div id='leftpane'>
+                <div id='lefthead'>
+                    <a href="#" class="itembutton blue pfirst">常用<br/>程序</a>
+                    <a href="#" class="itembutton blue">磁盘<br/>工具</a>
+                    <a href="#" class="itembutton blue">系统<br/>安装</a>
+                </div>
+                <HR width='80%' color='Silver' size=1></HR>
+                <div id='itemlistview'>
+                </div>
+                <HR width='80%' color='Silver' size=1></HR>
+                <div id='leftbottom'>
+                    <a href="# all" id='showall' onclick='showallitem(this.id);' style="width: 230px;height:30px;margin-top:0px;text-align: left;color: #000" class="itembutton pfirst">    ▶    所有程序</a>
+                    <img style="margin-top:5px;width: 32px;height:30px;float: left;" src="SearchS++.png" class="pfirst" />
+                    <a href="#" style="margin-top:5px;display: inline-block;width: 200px;height:30px;text-align: left;background: #f3f3f3;" > </a>
+                </div>
+          </div>
+          <div id='rightpane'>
+              <div id='righthead'>
+                       <a href="#" style="background-image: url('userlogo.png');background-size:cover;" class="imgbutton pfirst"></a>
+                       <a href="#" style="margin-top:15px;margin-left:20px;width: 84px;" class="navbutton sel_nav_right">设置</a>
+                       <a href="#" style="margin-left:20px;width: 84px;" class="navbutton">应用</a>
+              </div>
+              <HR width='80%' color='DimGray' size=1></HR>
+              <div id='pane_nav'>
+                      <a href="#" class="navbutton">维护工具</a>
+                      <a href="#rplink_rcapp" id='rp_rcapp' onclick='rpnavllink_click(this.id);' class="navbutton sel_nav_left">常用程序</a>
+                      <a href="#rplink_drive" id='rp_drive' onclick='rpnavllink_click(this.id);' class="navbutton">驱动相关</a>
+                      <a href="#" class="navbutton">系统安装</a>
+                      <div name='dummy' style='float:left;height:40px;width: 100%;'></div>
+              </div>
+              <HR width='80%' color='DimGray' size=1></HR>
+                      <a href="#" class="navbutton">工作</a>
+                      <a href="#" class="navbutton">财务公式</a>
+              <HR width='80%' color='DimGray' size=1></HR>
+              <div id='tools'>
+                    <a href="#" style="margin-left:5px;width:95%;background: DeepSkyBlue;" class="navbutton"><b>工具</b></a>
+                    <div style="display: inline-block;margin-left:5px;width:95%;height:50px;background: white;">
+                          <div style="margin-top:15px;">
+                          <div style="margin-left:50px;float:left;height: 25px;width:25px;background-image: url('colorpick.png');"></div>
+                                   <div style="margin-top:5px;margin-left:5px;float:left;height: 14px;width:14px;border: 2px solid #000;background: #da70d6;"></div>
+                                   <text style="margin-top:5px;margin-left:5px;float:left;">#da70d6</text>
+                          </div>
+                    </div>
+                     <div name='dummy' style='float:left;height:5px;width: 100%;'></div>
+              </div>
+              <HR width='80%' color='DimGray' size=1></HR>
+              <div id='help'>
+                      <a href="#" class="navbutton">帮助</a>
+              </div>
+              <HR width='80%' color='DimGray' size=1></HR>
+              <div id='power_option'>
+                  <a href="#" class="navbutton">重启</a>
+                  <a href="#" class="navbutton">关机</a>
+              </div>
+          </div>
+          <div id='right_submenu'>
+                <a href="#" style="margin-top:5px;margin-left:5px;width:94%;background: PaleVioletRed;" class="navbutton">日程安排</a>
+                <a href="#" style="margin-left:5px;width:94%;background: PaleVioletRed;" class="navbutton">作业进度</a>
+                <a href="#" style="margin-left:5px;width:94%;background: PaleVioletRed;" class="navbutton">电话簿</a>
+          </div>
+          <div id='right_workplace'>
+                <a href="#" style="margin-top:5px;margin-left:5px;width:97%;background: #53bcf3;" class="navbutton">透明度 背景色</a>
+                <a href="#" style="margin-left:5px;height:80px;width:97%;background-image: url('bksettings.png');" class="navbutton"></a>
+                <a href="#" style="margin-left:5px;width:97%;background: #53bcf3;" class="navbutton">桌面壁纸</a>
+                <div style="float:left;margin-left:5px;height:235px;width:97%;background: #2a3b69" >
+                    <a href="#" style="margin-top:15px;margin-left:30px;height:204px;width:323px;background-image: url('wpsettings.png');" class="navbutton"></a>
+                </div>
+                <a href="#" style="margin-left:5px;width:97%;background: #53bcf3;" class="navbutton">更多</a>
+                <div style="float:left;margin-left:5px;height:100px;width:97%;background: #2a3b69" >
+                    <a href="#" style="margin-top:15px;margin-left:15px;height:66px;width:357px;background-image: url('moresettings.png');" class="navbutton"></a>
+                </div>
+                <a href="#" style="margin-left:5px;height:55px;width:97%;background: #2a3b69" class="navbutton"></a>
+          </div>
       </div>
-      <HR width='80%' color='Silver' size=1 />
-      <div id='listview'>
-        
-      </div>
-      <HR width='80%' color='Silver' size=1 />
-      <div id='leftbottom'>
-        <a href="#" class="button blue pfirst">所有<br/>程序</a>
-        <a href="#" class="button blue">控制<br/>面板</a>
-        <a href="#" class="button blue">计算<br/>  器</a>
-      </div>
-    </div>
-    <div id='rightpane'>
-    <div id='righthead'>
-          <a href="#" class="button blue pfirst">用户</a>
-          <a href="#" class="button blue">文档</a>
-      </div>
-      <HR width='80%' color='DimGray' size=1 />
-      <div id='pane_nav'>
-          <a href="#" class="imgbutton">维护工具</a>
-          <a href="#rplink_rcapp" id='rp_rcapp' onclick='rplink_click(this.id);' class="imgbutton imgbuttonsel">常用程序</a>
-          <a href="#rplink_drive" id='rp_drive' onclick='rplink_click(this.id);' class="imgbutton">驱动相关</a>
-          <a href="#" class="imgbutton">系统安装</a>
-          <div name='dummy' style='float:left;height:200px;width: 100%;' />
-      </div>
-      <HR width='80%' color='DimGray' size=1 />
-      <div id='help'>
-          <a href="#" class="imgbutton">帮助</a>
-      </div>
-      <HR width='80%' color='DimGray' size=1 />
-      <div id='power_option'>
-        <a href="#" class="imgbutton">重启</a>
-        <a href="#" class="imgbutton">关机</a>
-      </div>
-    </div>
-  </div>
-  </body>
+
+      <br/>
+      <br/>
+      <button onclick="ShowElem('right_submenu');">显示菜单</button>
+      <button onclick="ShowElem('right_workplace');">显示工作面板</button>
+    </body>
 </html>
